--- a/SpeechSignalAnalysisSystem/SpeechSignalAnalysisSystem.vcxproj.filters
+++ b/SpeechSignalAnalysisSystem/SpeechSignalAnalysisSystem.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="filter_M.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="winfunc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="mainwindow.h">
@@ -104,6 +107,9 @@
     <QtMoc Include="freqyres.h">
       <Filter>Header Files</Filter>
     </QtMoc>
+    <QtMoc Include="winfunc.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="mainwindow.ui">
@@ -128,6 +134,9 @@
       <Filter>Form Files</Filter>
     </QtUic>
     <QtUic Include="freqyres.ui">
+      <Filter>Form Files</Filter>
+    </QtUic>
+    <QtUic Include="winfunc.ui">
       <Filter>Form Files</Filter>
     </QtUic>
   </ItemGroup>
